force-app/main/default/objects/Contractor__c/Contractor__c.object-meta.xml
<CustomObject>
    <description>Contractors</description>
    <label>Contractor</label>
    <nameField>
        <label>Contractor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>