force-app/main/default/objects/Contractor__c/fields/Contact_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_End_Date__c</fullName>
    <description>Set Contact End Date</description>
    <inlineHelpText>Set Contact End Date</inlineHelpText>
    <label>Contact End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>