force-app/main/default/objects/Contractor__c/fields/Racer__c.field-meta.xml
<CustomField>
    <fullName>Racer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Select racer</description>
    <inlineHelpText>Select racer</inlineHelpText>
    <label>Racer</label>
    <referenceTo>Racer__c</referenceTo>
    <relationshipLabel>Contractors</relationshipLabel>
    <relationshipName>Contractors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>